@@ -7,6 +7,7 @@
 * Added the affiliates_new_affiliate_user_registration_params filter.
 * Fixed use of deprecated block_categories filter with WordPress 5.8+ using the block_categories_all filter instead.
 * Removed a dropped integration entry from add-ons.
+* Affiliate registration form now shows account is closed for deleted affiliates.
 
 = 4.9.0 =
 * WordPress 5.7 compatible.
